fixed a bug with z-index sorting

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,15 @@ html, body, #root {
     margin: 0px;
 }
 
+.unselectable {
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
 .input {
     display: none;
     position: absolute;
@@ -19,16 +28,17 @@ html, body, #root {
     width: auto;
     height: auto;
 }
-.player {
-    display: flex;
-    justify-content: center;
-}
-.player-name {
+.message {
     display: flex;
     align-self: center;
     color: white;
     font-size: 20px;
     font-family: "Comic Sans MS", "Comic Sans";
+    z-index: inherit;
+}
+.message-image {
+    width: 200px;
+    z-index: inherit;
 }
 
 .container {
@@ -96,7 +106,7 @@ html, body, #root {
     z-index: 999999999;
     user-select: none;
 }
-.input-player-name {
+.input-message {
     display: flex;
     width: auto;
     vertical-align: center;
@@ -127,7 +137,7 @@ html, body, #root {
     .connect-info {
         height: 5%;
     }
-    .input-player-name {
+    .input-message {
         width: 70%;
         height: 36px;
         outline: none;
